fix overflow sidebar & header + breadcrubs

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,13 @@
 #content {
   background: whitesmoke;
   width: 100%;
+  height: 92vh;
   padding: 0;
-  min-height: 100vh;
+
   -webkit-transition: all 0.3s;
   -o-transition: all 0.3s;
-  transition: all 0.3s; }
+  transition: all 0.3s; 
+overflow-y: scroll;
+
+}
+  
